traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:2: error: not found: value x
    x=getX()
    ^TraversalByColumn:3: error: not found: value y
    y=getY()
    ^TraversalByColumn:5: error: not found: value x
    setPos(x,y)
           ^TraversalByColumn:5: error: not found: value y
    setPos(x,y)
             ^