traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  do {
    x=getX()
    y=getY()
    
    setPos(x,y)
    
  } while (positionFinale())
  
}

def positionFinale(): Boolean = {
  	return ((getX()==getMondeLargeur()) && (getY()==getMondeHauteur()))
    
  }